<resources>
<!--    <string name="app_name">UdacityShoeStore</string>-->
    <string name="app_name">Shozi Store</string>

    <string name="login_mail_hint">Email</string>
    <string name="password_mail_hint">Password</string>

    <string name="sign_in_btn_txt">Sign In</string>
    <string name="sign_up_btn_txt">Sign Up</string>
    <string name="or_tv_login_act">OR</string>

    <string name="wrong_mail_or_pass_toast_msg">Enter Email and Password…</string>
    <string name="wrong_mail_toast_msg">Enter a Valid Mail</string>


    <string name="title_board">Welcome To \n Shozi Shoes Store</string>
    <string name="desc_board">Start Selling Today</string>
    <string name="btn_txt_board">Next</string>

    <string name="title_instructions">Shozi Shoes Store</string>
    <string name="desc_instructions">Sell Immediately  </string>
    <string name="btn_txt_instructions">Let\'s Go</string>

    <string name="shoe_name">Name: </string>


    <string name="add_shoe">Add Shoe</string>

    <string name="name_hint">Enter Shoes Name</string>
    <string name="desc_hint">Enter Description</string>
    <string name="company_hint">Enter Company Name</string>
    <string name="size_hint">Enter Shoes Size</string>

    <string name="name_label">Name:</string>
    <string name="desc_label">Description:</string>
    <string name="company_label">Company:</string>
    <string name="size_label">Size:</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="wrong_data_toast_msg">Enter Shoes Data</string>

    <string name="menu">Menu</string>
    <string name="logout">Logout</string>




    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>