<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<!--    USING CONSTRAINT TO MAKE LAYOUT FIT ALL PORTRAIT AND LANDSCAPE-->

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.welcome.InstructionsWelcomeFrag">


        <TextView
            android:id="@+id/titleTvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:text="@string/title_instructions"
            android:textAlignment="center"
            android:textColor="@color/yellow_darker"
            android:textSize="20sp"

            android:textStyle="bold"


            app:layout_constraintBottom_toTopOf="@+id/imgInstruction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="parent"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"

            app:layout_constraintVertical_chainStyle="packed" />


        <ImageView
            android:id="@+id/imgInstruction"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="15dp"


            android:src="@drawable/shoes_instructions_img"
            app:layout_constraintBottom_toTopOf="@+id/descTvInstruction"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/titleTvInstruction"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed" />


        <TextView
            android:id="@+id/descTvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/el_messiri"
            android:gravity="center_horizontal"
            android:text="@string/desc_instructions"
            android:textAlignment="center"
            android:textColor="@color/yellow_darker"
            android:textSize="20sp"

            android:textStyle="bold"


            app:layout_constraintBottom_toTopOf="@+id/nextBtnInstruction"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/imgInstruction"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/nextBtnInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/btn_background_design"

            android:fontFamily="@font/aclonica"
            android:text="@string/btn_txt_instructions"
            android:textAllCaps="false"

            android:textColor="@color/light_blue_900"
            android:textSize="18sp"

            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descTvInstruction"
            app:layout_constraintVertical_bias="0.5"

            android:layout_marginBottom="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>